http-proxy-envoy-config.yaml
admin:
  address:
    socket_address:
      address: localhost
      port_value: 9004
layered_runtime:
  layers:
    - name: static-layer
      static_layer:
        envoy.reloadable_features.http1_use_balsa_parser: true
        envoy.reloadable_features.http2_use_oghttp2: true
        envoy.resource_limits.listener.proxy.connection_limit: 1000
        overload.global_downstream_max_connections: 1000
static_resources:
  clusters:
    - name: dynamic_forward_proxy_cluster
      connect_timeout: 2s
      dns_lookup_family: ALL
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          allow_coalesced_connections: true
          dns_cache_config:
            name: dynamic_forward_proxy_cache_config
            dns_lookup_family: ALL
  listeners:
    - name: dynamic_forward_proxy_upgrade
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: dynamic_forward_proxy_cache_config
                        dns_lookup_family: ALL
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                http2_protocol_options:
                  allow_connect: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: dynamic_forward_proxy_cluster
                        - match:
                            connect_matcher: {}
                          route:
                            cluster: dynamic_forward_proxy_cluster
                            upgrade_configs:
                              - upgrade_type: CONNECT
                                connect_config: {}
                stat_prefix: dynamic_forward_proxy_upgrade
      address:
        socket_address:
          address: localhost
          port_value: 9005    
      traffic_direction: OUTBOUND
